@@ -33,6 +33,7 @@
 
 package org.restlet.ext.gae;
 
+import org.restlet.Application;
 import org.restlet.data.ClientInfo;
 import org.restlet.security.Enroler;
 import org.restlet.security.Role;
@@ -40,8 +41,8 @@ import org.restlet.security.Role;
 import com.google.appengine.api.users.UserServiceFactory;
 
 /**
- * Enroler that adds a Restlet Role object to the client info if the GAE API
- * reports that the user is an administrator.
+ * Enroler that adds a Restlet {@link Role} object to the request's
+ * {@link ClientInfo} if the GAE API reports that the user is an administrator.
  * 
  * @author Matt Kennedy
  */
@@ -61,6 +62,35 @@ public class GaeEnroler implements Enroler {
     /**
      * Constructor.
      * 
+     * @param application
+     *            The parent application.
+     * @param adminRoleName
+     *            The name of the administrator role.
+     */
+    public GaeEnroler(Application application, String adminRoleName) {
+        this(Role.get(application, adminRoleName,
+                "Administrator of the current application."));
+    }
+
+    /**
+     * Constructor.
+     * 
+     * @param application
+     *            The parent application.
+     * @param adminRoleName
+     *            The name of the administrator role.
+     * @param adminRoleDescription
+     *            The description of the administrator role.
+     */
+    public GaeEnroler(Application application, String adminRoleName,
+            String adminRoleDescription) {
+        this(Role
+                .get(application, adminRoleName, adminRoleDescription));
+    }
+
+    /**
+     * Constructor.
+     * 
      * @param adminRole
      *            The administrator role.
      */
@@ -73,7 +103,9 @@ public class GaeEnroler implements Enroler {
      * 
      * @param adminRoleName
      *            The name of the administrator role.
+     * @deprecated Use {@link #GaeEnroler(Application, String)} instead.
      */
+    @Deprecated
     public GaeEnroler(String adminRoleName) {
         this(adminRoleName, "Administrator of the current application.");
     }
@@ -85,7 +117,9 @@ public class GaeEnroler implements Enroler {
      *            The name of the administrator role.
      * @param adminRoleDescription
      *            The description of the administrator role.
+     * @deprecated Use {@link #GaeEnroler(Application, String, String)} instead.
      */
+    @Deprecated
     public GaeEnroler(String adminRoleName, String adminRoleDescription) {
         this(new Role(adminRoleName, adminRoleDescription));
     }
